force-app/main/default/objects/Contact_Email_Settings__c/Contact_Email_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Org-wide controls for Contact Orbit verified Contact email routing.</description>
    <label>Contact Email Settings</label>
</CustomObject>