force-app/main/default/objects/Contact_Email_Settings__c/fields/Enable_Email_To_Case_Matching__c.field-meta.xml
<CustomField>
    <fullName>Enable_Email_To_Case_Matching__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, an inbound EmailMessage can populate an empty Case Contact from one unambiguous active alternate email match.</description>
    <label>Enable Email-to-Case Matching</label>
    <type>Checkbox</type>
</CustomField>