force-app/main/default/objects/Contact_Email_Settings__c/fields/Enable_Email_To_Case_Suggestions__c.field-meta.xml
<CustomField>
    <fullName>Enable_Email_To_Case_Suggestions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Org-wide switch for safe Email-to-Case candidate suggestions. Off by default.</description>
    <label>Enable Email-to-Case Suggestions</label>
    <type>Checkbox</type>
</CustomField>