force-app/main/default/objects/Contact_Email_Settings__c/fields/Enable_Verified_Auto_Link__c.field-meta.xml
<CustomField>
    <fullName>Enable_Verified_Auto_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Advanced opt-in. Ignored unless Email-to-Case suggestions are enabled.</description>
    <label>Enable Verified Auto-Link</label>
    <type>Checkbox</type>
</CustomField>