force-app/main/default/objects/Contact_Email_Settings__c/fields/Match_Log_Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Match_Log_Retention_Days__c</fullName>
    <defaultValue>90</defaultValue>
    <description>Terminal match-log retention in days. The service clamps this value to 30 through 730.</description>
    <label>Match Log Retention Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>